# 4-track

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
.github/: FUNDING.yml
.github/workflows/: build.yml
assets/: AppIcon.icns
cmake/: DisableMacWindowRestoration.cmake
packaging/: 4-Track.desktop
src/: AppFonts.h  AppLookAndFeel.h  AppSettings.cpp  AppSettings.h  AppSettingsComponent.cpp  AppSettingsComponent.h  MainComponent.cpp  MainComponent.h  TapeEngine.cpp  TapeEngine.h  TapeView.cpp  TapeView.h  Track.h  TrackControlChain.cpp  TrackControlChain.h  TrackMixerPanel.cpp  TrackMixerPanel.h  TransportControls.cpp  TransportControls.h  main.cpp
src/audio/: AudioDeviceController.cpp  AudioDeviceController.h
src/audio/engine/: TapeEngineAudioCallback.cpp  TapeEngineAudioDevice.cpp  TapeEngineMixerExport.cpp  TapeEngineModules.cpp  TapeEngineRouting.cpp  TapeEngineTransport.cpp
src/ui/mixer/: TrackMixerPanelLayout.cpp  TrackMixerPanelPaint.cpp
src/ui/pre_tape/: TrackControlChainChorusModule.cpp  TrackControlChainCompressorModule.cpp  TrackControlChainDelayModule.cpp  TrackControlChainEqModule.cpp  TrackControlChainFilterModule.cpp  TrackControlChainGainModule.cpp  TrackControlChainInputModule.cpp  TrackControlChainLayout.cpp  TrackControlChainLimiterModule.cpp  TrackControlChainNoiseGateModule.cpp  TrackControlChainPaint.cpp  TrackControlChainPhaserModule.cpp  TrackControlChainReverbModule.cpp  TrackControlChainSaturationModule.cpp  TrackControlChainSpectrumModule.cpp  TrackControlChainWidgets.cpp
src/ui/settings/sections/: ExportSettingsSection.cpp  ExportSettingsSection.h  TechnicalSettingsSection.cpp  TechnicalSettingsSection.h  UserSettingsSection.cpp  UserSettingsSection.h
src/ui/tape/: TapeViewGeometry.cpp  TapeViewInteraction.cpp  TapeViewPaint.cpp
